# aft

./: .gitmodules  README.md
Arbeit/: .gitignore  Abstract.tex  Makefile  Selbststaendigkeitserklaerung.tex  Titel.tex  mgthesis.sty  mybibstyle.bst  references.bib  thesis.tex
Arbeit/chapter/: 01_einleitung.tex  02_grundlagen.tex  03_relatedwork.tex  04_analyse.tex  05_konzept.tex  06_ergebnisse.tex  07_diskussion.tex  07_fazit.tex  08_fazit.tex
Implementation/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  onset_detection.cpp  onset_detection.h  record.sh  shift_register.cpp  shift_register.h  tempo_induction.cpp  tempo_induction.h
Implementation/include/: beat_prediction.h  misc.h  shift_register.h  tempo_induction.h
Implementation/include/2009_DaPlSt/: 2009_DaPlSt.h  beat_prediction.h  constants.h  demo.h  main.h  onset_detection.h  tempo_induction.h
Implementation/src/: beat_prediction.cpp  main.cpp  misc.cpp  onset_detection.cpp  shift_register.cpp  tempo_induction.cpp
Implementation/src/2009_DaPlSt/: 2009_DaPlSt.cpp  beat_prediction.cpp  demo.cpp  main.cpp  onset_detection.cpp  tempo_induction.cpp
Implementierung/: .gitignore  CMakeLists.txt  Makefile  README.md  record.sh  screen_capture.sh
Implementierung/include/: misc.h  shift_register.h
Implementierung/include/2001_ChNaUpVe/: beat_this.h  constants.h
Implementierung/include/2004_BeDaDuSa/: onset_detection.h
Implementierung/include/2009_DaPlSt/: 2009_DaPlSt.h  beat_prediction.h  constants.h  tempo_induction.h
Implementierung/include/2011_PlRoSt/: 2011_PlRoSt.h  constants.h
Implementierung/src/: main.cpp  misc.cpp  shift_register.cpp
Implementierung/src/2001_ChNaUpVe/: beat_this.cpp  main.cpp
Implementierung/src/2004_BeDaDuSa/: onset_detection.cpp
Implementierung/src/2009_DaPlSt/: 2009_DaPlSt.cpp  beat_prediction.cpp  main.cpp  onset_detection.cpp  tempo_induction.cpp
Implementierung/src/2011_PlRoSt/: 2011_PlRoSt.cpp  main.cpp
Testdatenauswertung/: beat_positions.py  common.py  cpu_time.py  create_venv.sh  ground_truth_tempo_historgram.py  requirements.txt  tempo_error_hisrogram.py  tempo_error_histogram.py
